variables.RunFour.scala.error
Erreur de compilation :
RunFour:3: error: value update is not a member of Boolean
  if (estSurBiscuit()=false){
      ^