variables.RunFour.scala.code
var nbBiscuit=0
while(nbBiscuit!=4){
  if (estSurBiscuit()=false){
    avance()
  } else {
    prendBiscuit()
    nbBiscuit=nbBiscuit+1
    avance()
  }
}
  